--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "ant-design-vue": "^4.2.6",
+    "element-plus": "^2.10.2",
+    "exceljs": "^4.4.0",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
-    "element-plus": "^2.10.2"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
