--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ant-design-vue": "^4.2.6",
     "element-plus": "^2.10.2",
     "exceljs": "^4.4.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
