chore: 新增vue3代码片段，以及新增部分vscode设置

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "christian-kohler.path-intellisense",
+    "warmthsea.vscode-custom-code-color",
+    "vscode-icons-team.vscode-icons",
+    "stylelint.vscode-stylelint",
+    "Vue.volar"
+  ]
 }
