--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
-    "postcss": "^8.5.6",
+    "postcss": "^8.5.4",
     "postcss-html": "^1.8.0",
     "postcss-load-config": "^6.0.1",
     "postcss-scss": "^4.0.9",
     "rimraf": "^6.0.1",
-    "sass": "^1.89.2",
-    "stylelint": "^16.21.1",
-    "stylelint-config-recess-order": "^7.1.0",
-    "stylelint-config-recommended-vue": "^1.6.1",
+    "sass": "^1.89.1",
+    "stylelint": "^16.20.0",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-prettier": "^5.0.3",
-    "vite": "^7.0.2"
+    "vite": "^7.0.0"
   },
   "engines": {
-    "node": "^20.19.0 || >=22.12.0",
+    "node": "^18.18.0 || ^20.9.0 || >=22.0.0",
     "pnpm": ">=9"
   },
   "pnpm": {
