--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "exceljs": "^4.4.0",
+    "jszip": "^3.10.1",
     "pinia": "^3.0.3",
+    "uuid": "^11.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "xlsx": "^0.18.5"
