--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,9 @@ tests/**/coverage/
 vite.config.*.timestamp*
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+tsconfig.tsbuildinfo
