chore: update deploy config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,38 @@
+# HTTP 跳转到 HTTPS
 server {
     listen 80;
-    server_name localhost;
+    server_name lottery.chubbyduner.top;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
-        try_files $uri $uri/ /index.html;  # 关键：支持history模式
+    location ~ /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
     }
+
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS 主服务配置
+server {
+    listen 443 ssl;
+    server_name lottery.chubbyduner.top;
+
+    # SSL 证书路径（替换为你自己的证书路径）
+    ssl_certificate     /etc/nginx/ssl/lottery.chubbyduner.top.crt;
+    ssl_certificate_key /etc/nginx/ssl/lottery.chubbyduner.top.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # 静态资源部署目录
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # 前端 history 路由支持
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # 可选：gzip 压缩
+    gzip on;
+    gzip_min_length 1k;
+    gzip_types text/plain text/css application/json application/javascript application/xml+rss application/xml text/javascript application/x-javascript;
 }
