--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.8"
 
 services:
+  nginx:
+    image: nginx:latest
   app:
     build:
       context: .
@@ -9,8 +11,4 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./dist:/usr/share/nginx/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/nginx/ssl:ro       # 如果你用 HTTPS
     restart: always
