--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,6 +31,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # 证书验证路径仍然允许外部访问
+    location ~ /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+    }
+
     # 可选：gzip 压缩
     gzip on;
     gzip_min_length 1k;
