chore: 修改打包路径

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 # HTTP 跳转到 HTTPS
 server {
     listen 80;
-    server_name lottery.chubbyduner.top;
+    server_name chubbyduner.top;
 
     location ~ /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
@@ -13,7 +13,7 @@ server {
 # HTTPS 主服务配置
 server {
     listen 443 ssl;
-    server_name lottery.chubbyduner.top;
+    server_name chubbyduner.top;
 
     # SSL 证书路径（替换为你自己的证书路径）
     ssl_certificate     /etc/nginx/ssl/lottery.chubbyduner.top.crt;
@@ -27,8 +27,8 @@ server {
     index index.html;
 
     # 前端 history 路由支持
-    location / {
-        try_files $uri $uri/ /index.html;
+    location /lottery/ {
+        try_files $uri $uri/ /lottery/index.html;
     }
 
     # 证书验证路径仍然允许外部访问
