--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "axios": "^1.10.0",
     "ant-design-vue": "^4.2.6",
     "canvas-confetti": "^1.9.3",
     "echarts": "^6.0.0",
